--- a/front_end/front_end/package.json
+++ b/front_end/front_end/package.json
@@ -14,8 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.21.0",
     "element-ui": "^2.14.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -55,8 +56,11 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -71,6 +75,7 @@
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
+    "vue-particles": "^1.0.9",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
