--- a/front_end/front_end/package.json
+++ b/front_end/front_end/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "echarts": "^4.9.0",
     "element-ui": "^2.14.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
